--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "hardhat": "^2.22.19"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.2.0"
+    "@openzeppelin/contracts": "^5.2.0",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "wagmi": "^2.14.12"
   }
 }
